Fixed label overlap

--- a/src/app/components/comment-form/comment-form.component.css
+++ b/src/app/components/comment-form/comment-form.component.css
@@ -4,3 +4,10 @@
     border: 1px solid black;
     border-radius: 0.375rem;
 }
+
+
+label{
+    font-size: 1.2rem;
+    padding-top: 0.6rem;
+    padding-bottom: 0.2rem;
+}
